<resources>
    <string name="app_name">Accessibility Demo</string>

    <!-- Toolbar -->
    <string name="action_settings">Settings</string>

    <!-- Home Screen -->
    <string name="main_activity_tv">Pick which screen to view</string>
    <string name="default_access_btn_title">Launch Activity With Defaults</string>
    <string name="with_access_btn_title">Launch Activity With Accessibility</string>
    <string name="learn_more_btn">Learn more about accessibility</string>
    <string name="quote_tv">Making Android for Everybody</string>

    <!-- Default Screen -->
    <string name="title_activity_default_accessibility">Default Accessibility</string>
    <string name="login_btn">Login</string>
    <string name="remember_me_tv">Remember me</string>
    <string name="checkbox">checkbox</string>
    <string name="email_hint_et">Email</string>
    <string name="pw_hint_et">Password</string>

    <!-- With Accessibility Screen -->
    <string name="title_activity_with_access">With Accessibility</string>

    <!-- Accessibility Content Descriptions -->
    <string name="title_activity_with_access_cd">With Accessibility Header</string>
    <string name="checkbox_cd">Remember me</string>
    <string name="remember_me_cd">If you want us to remember you, please make sure checkbox is on</string>
    <string name="remember_me_on_cd">Remember me checkbox is on</string>
    <string name="remember_me_off_cd">Remember me checkbox is off</string>
    <string name="email_et_cd">Please enter your email</string>
    <string name="pw_et_cd">Please enter your password</string>
    <string name="learn_more_btn_cd">Learn more about accessibility. Go to Android Developer website</string>
    <string name="image_btn_cd">This image is irrelevant to your experience</string>
</resources>
