<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin"
            android:contentDescription="@string/main_activity_tv"
            android:text="@string/main_activity_tv"
            android:textSize="24sp" />

        <Button
            android:id="@+id/default_access_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/default_access_btn_title" />

        <Button
            android:id="@+id/with_access_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/with_access_btn_title" />

        <Button
            android:id="@+id/learn_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/learn_more_btn" />

    </LinearLayout>
</RelativeLayout>
