<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefaultAccessibilityActivityFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/input_one_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint_et"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/input_two_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw_hint_et"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/checkbox_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me_tv" />
        </LinearLayout>

        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_btn"
            android:textColor="#F5F5F5" />
    </LinearLayout>

    <ImageView
        android:id="@+id/rainbow_pixel_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitEnd"
        android:src="@drawable/rainbowpixels" />
</RelativeLayout>
